[package]
name = "reg-map-derive"
version = "0.1.0"
authors = ["Riccardo Borgani <44963821+rikyborg@users.noreply.github.com>"]
edition = "2021"
description = "Implementation detail (proc-macro) of the `reg-map` crate"
documentation = "https://docs.rs/reg-map"
readme = false
repository = "https://github.com/rikyborg/reg-map"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"
